Fixed some css issues on mobile, added link to the podcast

--- a/css/Styles.css
+++ b/css/Styles.css
@@ -9,6 +9,9 @@
 	font-size: 100%;
 	color: White;
 	margin:0;
+	font-size: 16px;
+    overflow-wrap: break-word;
+
 	
 }
 
@@ -37,13 +40,19 @@
 
 .contributor {
 	float: left;
-	margin: 10px 10px 10px 10px;
+	margin: 10px 1.25% 10px 1.25% ;
 	postion:relative;	
+	width: 45%;
 }
 .bio {
-	float: right;
-	margin: 10px 10px 10px 10px;
-	font-family: Arial;
+    margin: 10% 10px 0px 10;
+    font-family: Arial;
+    position: relative;
+    float: right;
+    width: inherit;
+    text-align: center;
+	overflow:hidden;
+
 }
 .contributor_img {
 	alt:"Age is more than a number"; 
@@ -52,7 +61,7 @@
 	border-radius: 100px;
 	float: left;
 	/* Top Right Bottom Left*/
-	margin: 10px 10px 10px 100px;	
+	margin: 10px 10px 10px 10px;	
 }
 .contributor_img:hover{
 	opacity: .5;
@@ -72,6 +81,7 @@
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
+	overflow: hidden;
 }
 
 .id-dropdown:hover .id-dropdown-content {
@@ -178,18 +188,26 @@
 .dropdown {
 
   float: left;
-  overflow: auto;
+  overflow: hidden;
   position:relative;
 }
 
 /* Dropdown button */
 .dropdown .dropbtn {
+  /* Hack for mobile which dispalyed this at 50%*/
   font-size: 16px; 
   border: none;
   outline: none;
   color: white;
+  text-align: center;
   padding: 14px 16px;
   background-color: inherit;
+}
+
+@media only screen and (min-width: 1000px) {
+.dropdown .dropbtn {
+	font-size: 16px;
+	}
 }
 
 /* Add a red background color to navbar links on hover */
@@ -200,14 +218,15 @@
 
 /* Dropdown content (hidden by default) */
 .dropdown-content {
-  display: none;
-  position: fixed;
-  background-color: #f9f9f9;
+  display: none; 
+ position: fixed;
+  background-color: #333;
   width: 90%;
   max-width: 750px;
   left: 0;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
+  overflow:hidden;
 }
 
 /* Mega Menu header, if needed */
@@ -226,10 +245,9 @@
 /* Create three equal columns that floats next to each other */
 .column {
   float: left;
-  width: 33.4%;
-  max-width:250px;
-  background-color: #333;
-  height: 250px;
+  width: 33.3%;
+/*  max-width:250px; */
+  height: auto;
 }
 
 /* Style links inside the columns */
@@ -280,32 +298,6 @@
 	height:60px;
 	margin: auto;
 	white-space: normal;
-}
-/* YouTube Section resizing for small displays */
-@media (max-width: 1000px){
-	.YTcluster {
-		width: 95%;
-		
-	}
-	.embeddedYT { 
-		width: 95%; 
-	} 
-	.YTbio {
-		min-width: 200px;
-		width:50%;
-	}
-}
-@media (max-width: 800px){
-	.YTcluster {
-		width: 95%;
-	}
-	.embeddedYT { 
-		width: 100%; 
-	} 
-	.YTbio {
-		min-width: 200px;
-		width:100%;
-	}
 }
 
 /*Blog*/
@@ -360,6 +352,7 @@
     padding: 10px;
     text-indent: 0;
     text-align: left;
+	overflow-wrap: break-word;
 }
 /* YouTube Section resizing for small displays */
 @media (max-width: 1000px){
@@ -367,20 +360,34 @@
 		width: 95%;
 	}
 	.embeddedYT { 
-		width: 100%; 
+		width: 100%;
+		height: 100%;
 	} 
 	.YTbio {
 		min-width: 200px;
 		width:100%;
+	    margin-bottom: 225;
 	}
 }
 
 
 /* Higher Reselotion Displays */
+
 @media (min-resolution: 144dpi){
 
 	.header_title ,.body ,.bio ,.YTbio ,.YTtitle,.navbar a ,.news{
 		font-size: 200%;
 	}
+	.dropdown .dropbtn {
+	 	 font-size: 32px; 
+	 }
+ 	.back {
+    	background: linear-gradient(to bottom, rgb(200, 50, 175) 7%, rgb(10, 200, 200) 100%);
+	 }
+	 .blog_post{
+	 	max-width:96%;
+		padding:15px;
+	 }
+	 
 
 }
